--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            Notes by Amit Solanki
 description:      I write here. 
 url:              # Site url.
 signoff:          Amit Solanki
-disqus_shortname: disqus_IFZIdG0J60
+disqus_shortname: fashsolanki
 facebook_appid:   # appid for like button, remove from /_includes/share.html if unwanted.
 google_analytics: UA-41949970-3
 
